tests/baselines/reference/collisionExportsRequireAndClass.errors.txt
error TS5107: Option 'module=AMD' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
collisionExportsRequireAndClass_externalmodule.ts(1,14): error TS2441: Duplicate identifier 'require'. Compiler reserves name 'require' in top level scope of a module.
collisionExportsRequireAndClass_externalmodule.ts(3,14): error TS2441: Duplicate identifier 'exports'. Compiler reserves name 'exports' in top level scope of a module.


!!! error TS5107: Option 'module=AMD' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== collisionExportsRequireAndClass_externalmodule.ts (2 errors) ====
    export class require {
                 ~~~~~~~
!!! error TS2441: Duplicate identifier 'require'. Compiler reserves name 'require' in top level scope of a module.
    }
    export class exports {
                 ~~~~~~~
!!! error TS2441: Duplicate identifier 'exports'. Compiler reserves name 'exports' in top level scope of a module.
    }
    namespace m1 {
        class require {
        }
        class exports {
        }
    }
    namespace m2 {
        export class require {
        }
        export class exports {
        }
    }
    
==== collisionExportsRequireAndClass_globalFile.ts (0 errors) ====
    class require {
    }
    class exports {
    }
    namespace m3 {
        class require {
        }
        class exports {
        }
    }
    namespace m4 {
        export class require {
        }
        export class exports {
        }
    }